chore(memory, hashtag - domain, api, test): - add hashTag to memory - add related hashTag